--- a/src/Lucene.Net.Core/Lucene.Net.Core.csproj
+++ b/src/Lucene.Net.Core/Lucene.Net.Core.csproj
@@ -76,7 +76,7 @@
     <Compile Include="Util\InPlaceMergeSorter.cs" />
     <Compile Include="Util\RamUsageEstimator.cs" />
     <Compile Include="Util\Sorter.cs" />
-    <Compile Include="Util\SystemProp.cs" />
+    <Compile Include="Util\SystemProps.cs" />
     <Compile Include="Util\Version.cs" />
   </ItemGroup>
   <ItemGroup>
