--- a/src/Lucene.Net.Core/project.json
+++ b/src/Lucene.Net.Core/project.json
@@ -1,5 +1,6 @@
 ﻿{
     "licenses": ["apache 2.0"],
+     "version": "5.0.0.0",
     "dependencies": {
         "Microsoft.Framework.ConfigurationModel": "1.0.0-alpha2"
     },
