--- a/src/Lucene.Net.Core/Lucene.Net.Core.csproj
+++ b/src/Lucene.Net.Core/Lucene.Net.Core.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Util\BitUtil.cs" />
     <Compile Include="Util\BroadWord.cs" />
     <Compile Include="Util\BytesRef.cs" />
+    <Compile Include="Util\CharsRefBuilder.cs" />
     <Compile Include="Util\CharsRef.cs" />
     <Compile Include="Util\Constants.cs" />
     <Compile Include="Util\IAccountable.cs" />
