adding BytesRefArray.cs, need to swap out ByteRef for BytesRefBuilder after BytesRefBuilder is ported.

--- a/test/Lucene.Net.Core.Tests/Lucene.Net.Core.Tests.csproj
+++ b/test/Lucene.Net.Core.Tests/Lucene.Net.Core.Tests.csproj
@@ -62,6 +62,8 @@
     <Compile Include="Util\BaseSorterTestCase.cs" />
     <Compile Include="Util\TestArrayUtil.cs" />
     <Compile Include="Util\TestBits.cs" />
+    <Compile Include="Util\TestByteArrayRef.cs" />
+    <Compile Include="Util\TestByteBlockPool.cs" />
     <Compile Include="Util\TestBroadWord.cs" />
     <Compile Include="Util\TestBytesRef.cs" />
     <Compile Include="Util\TestCharsRef.cs" />
