Moving ValueSource -> ValueSources to avoid name conflicts

--- a/src/Lucene.Net.Queries/Lucene.Net.Queries.csproj
+++ b/src/Lucene.Net.Queries/Lucene.Net.Queries.csproj
@@ -58,54 +58,54 @@
     <Compile Include="Function\FunctionValues.cs" />
     <Compile Include="Function\ValueSource.cs" />
     <Compile Include="Function\ValueSourceScorer.cs" />
-    <Compile Include="Function\ValueSource\BoolFunction.cs" />
-    <Compile Include="Function\ValueSource\ByteFieldSource.cs" />
-    <Compile Include="Function\ValueSource\BytesRefFieldSource.cs" />
-    <Compile Include="Function\ValueSource\ConstNumberSource.cs" />
-    <Compile Include="Function\ValueSource\ConstValueSource.cs" />
-    <Compile Include="Function\ValueSource\DefFunction.cs" />
-    <Compile Include="Function\ValueSource\DivFloatFunction.cs" />
-    <Compile Include="Function\ValueSource\DocFreqValueSource.cs" />
-    <Compile Include="Function\ValueSource\DoubleConstValueSource.cs" />
-    <Compile Include="Function\ValueSource\DoubleFieldSource.cs" />
-    <Compile Include="Function\ValueSource\DualFloatFunction.cs" />
-    <Compile Include="Function\ValueSource\EnumFieldSource.cs" />
-    <Compile Include="Function\ValueSource\FieldCacheSource.cs" />
-    <Compile Include="Function\ValueSource\FloatFieldSource.cs" />
-    <Compile Include="Function\ValueSource\IDFValueSource.cs" />
-    <Compile Include="Function\ValueSource\IfFunction.cs" />
-    <Compile Include="Function\ValueSource\IntFieldSource.cs" />
-    <Compile Include="Function\ValueSource\JoinDocFreqValueSource.cs" />
-    <Compile Include="Function\ValueSource\LinearFloatFunction.cs" />
-    <Compile Include="Function\ValueSource\LiteralValueSource.cs" />
-    <Compile Include="Function\ValueSource\LongFieldSource.cs" />
-    <Compile Include="Function\ValueSource\MaxDocValueSource.cs" />
-    <Compile Include="Function\ValueSource\MaxFloatFunction.cs" />
-    <Compile Include="Function\ValueSource\MinFloatFunction.cs" />
-    <Compile Include="Function\ValueSource\MultiBoolFunction.cs" />
-    <Compile Include="Function\ValueSource\MultiFloatFunction.cs" />
-    <Compile Include="Function\ValueSource\MultiFunction.cs" />
-    <Compile Include="Function\ValueSource\MultiValueSource.cs" />
-    <Compile Include="Function\ValueSource\NormValueSource.cs" />
-    <Compile Include="Function\ValueSource\NumDocsValueSource.cs" />
-    <Compile Include="Function\ValueSource\OrdFieldSource.cs" />
-    <Compile Include="Function\ValueSource\PowFloatFunction.cs" />
-    <Compile Include="Function\ValueSource\ProductFloatFunction.cs" />
-    <Compile Include="Function\ValueSource\QueryValueSource.cs" />
-    <Compile Include="Function\ValueSource\RangeMapFloatFunction.cs" />
-    <Compile Include="Function\ValueSource\ReciprocalFloatFunction.cs" />
-    <Compile Include="Function\ValueSource\ReverseOrdFieldSource.cs" />
-    <Compile Include="Function\ValueSource\ScaleFloatFunction.cs" />
-    <Compile Include="Function\ValueSource\ShortFieldSource.cs" />
-    <Compile Include="Function\ValueSource\SimpleBoolFunction.cs" />
-    <Compile Include="Function\ValueSource\SimpleFloatFunction.cs" />
-    <Compile Include="Function\ValueSource\SingleFunction.cs" />
-    <Compile Include="Function\ValueSource\SumFloatFunction.cs" />
-    <Compile Include="Function\ValueSource\SumTotalTermFreqValueSource.cs" />
-    <Compile Include="Function\ValueSource\TermFreqValueSource.cs" />
-    <Compile Include="Function\ValueSource\TFValueSource.cs" />
-    <Compile Include="Function\ValueSource\TotalTermFreqValueSource.cs" />
-    <Compile Include="Function\ValueSource\VectorValueSource.cs" />
+    <Compile Include="Function\ValueSources\BoolFunction.cs" />
+    <Compile Include="Function\ValueSources\ByteFieldSource.cs" />
+    <Compile Include="Function\ValueSources\BytesRefFieldSource.cs" />
+    <Compile Include="Function\ValueSources\ConstNumberSource.cs" />
+    <Compile Include="Function\ValueSources\ConstValueSource.cs" />
+    <Compile Include="Function\ValueSources\DefFunction.cs" />
+    <Compile Include="Function\ValueSources\DivFloatFunction.cs" />
+    <Compile Include="Function\ValueSources\DocFreqValueSource.cs" />
+    <Compile Include="Function\ValueSources\DoubleConstValueSource.cs" />
+    <Compile Include="Function\ValueSources\DoubleFieldSource.cs" />
+    <Compile Include="Function\ValueSources\DualFloatFunction.cs" />
+    <Compile Include="Function\ValueSources\EnumFieldSource.cs" />
+    <Compile Include="Function\ValueSources\FieldCacheSource.cs" />
+    <Compile Include="Function\ValueSources\FloatFieldSource.cs" />
+    <Compile Include="Function\ValueSources\IDFValueSource.cs" />
+    <Compile Include="Function\ValueSources\IfFunction.cs" />
+    <Compile Include="Function\ValueSources\IntFieldSource.cs" />
+    <Compile Include="Function\ValueSources\JoinDocFreqValueSource.cs" />
+    <Compile Include="Function\ValueSources\LinearFloatFunction.cs" />
+    <Compile Include="Function\ValueSources\LiteralValueSource.cs" />
+    <Compile Include="Function\ValueSources\LongFieldSource.cs" />
+    <Compile Include="Function\ValueSources\MaxDocValueSource.cs" />
+    <Compile Include="Function\ValueSources\MaxFloatFunction.cs" />
+    <Compile Include="Function\ValueSources\MinFloatFunction.cs" />
+    <Compile Include="Function\ValueSources\MultiBoolFunction.cs" />
+    <Compile Include="Function\ValueSources\MultiFloatFunction.cs" />
+    <Compile Include="Function\ValueSources\MultiFunction.cs" />
+    <Compile Include="Function\ValueSources\MultiValueSource.cs" />
+    <Compile Include="Function\ValueSources\NormValueSource.cs" />
+    <Compile Include="Function\ValueSources\NumDocsValueSource.cs" />
+    <Compile Include="Function\ValueSources\OrdFieldSource.cs" />
+    <Compile Include="Function\ValueSources\PowFloatFunction.cs" />
+    <Compile Include="Function\ValueSources\ProductFloatFunction.cs" />
+    <Compile Include="Function\ValueSources\QueryValueSource.cs" />
+    <Compile Include="Function\ValueSources\RangeMapFloatFunction.cs" />
+    <Compile Include="Function\ValueSources\ReciprocalFloatFunction.cs" />
+    <Compile Include="Function\ValueSources\ReverseOrdFieldSource.cs" />
+    <Compile Include="Function\ValueSources\ScaleFloatFunction.cs" />
+    <Compile Include="Function\ValueSources\ShortFieldSource.cs" />
+    <Compile Include="Function\ValueSources\SimpleBoolFunction.cs" />
+    <Compile Include="Function\ValueSources\SimpleFloatFunction.cs" />
+    <Compile Include="Function\ValueSources\SingleFunction.cs" />
+    <Compile Include="Function\ValueSources\SumFloatFunction.cs" />
+    <Compile Include="Function\ValueSources\SumTotalTermFreqValueSource.cs" />
+    <Compile Include="Function\ValueSources\TermFreqValueSource.cs" />
+    <Compile Include="Function\ValueSources\TFValueSource.cs" />
+    <Compile Include="Function\ValueSources\TotalTermFreqValueSource.cs" />
+    <Compile Include="Function\ValueSources\VectorValueSource.cs" />
     <Compile Include="Mlt\MoreLikeThis.cs" />
     <Compile Include="Mlt\MoreLikeThisQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
