--- a/src/Lucene.Net.Codecs/Lucene.Net.Codecs.csproj
+++ b/src/Lucene.Net.Codecs/Lucene.Net.Codecs.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -60,6 +61,7 @@
     <Compile Include="DiskDV\DiskDocValuesFormat.cs" />
     <Compile Include="DiskDV\DiskDocValuesProducer.cs" />
     <Compile Include="DiskDV\DiskNormsFormat.cs" />
+    <Compile Include="HashMapHelperClass.cs" />
     <Compile Include="Intblock\FixedIntBlockIndexInput.cs" />
     <Compile Include="Intblock\FixedIntBlockIndexOutput.cs" />
     <Compile Include="Intblock\IBlockReader.cs" />
@@ -89,6 +91,7 @@
     <Compile Include="Pulsing\PulsingPostingsFormat.cs" />
     <Compile Include="Pulsing\PulsingPostingsReader.cs" />
     <Compile Include="Pulsing\PulsingPostingsWriter.cs" />
+    <Compile Include="RectangularArrays.cs" />
     <Compile Include="Sep\IntIndexInput.cs" />
     <Compile Include="Sep\IntIndexOutput.cs" />
     <Compile Include="Sep\IntStreamFactory.cs" />
