Various test framework fixes

--- a/src/Lucene.Net.Tests/core/App.config
+++ b/src/Lucene.Net.Tests/core/App.config
@@ -41,4 +41,7 @@
       </providers>
     </roleManager>
   </system.web>
+  <system.diagnostics>
+    <assert assertuienabled="false" />
+  </system.diagnostics>
 </configuration>
