--- a/src/Lucene.Net.Codecs/Lucene.Net.Codecs.csproj
+++ b/src/Lucene.Net.Codecs/Lucene.Net.Codecs.csproj
@@ -65,8 +65,9 @@
     <Compile Include="Intblock\FixedIntBlockIndexInput.cs" />
     <Compile Include="Intblock\FixedIntBlockIndexOutput.cs" />
     <Compile Include="Intblock\IBlockReader.cs" />
-    <Compile Include="Intblock\Index.cs" />
-    <Compile Include="Intblock\Reader.cs" />
+    <Compile Include="Intblock\IntBlockIndexInput.cs" />
+    <Compile Include="Intblock\IntBlockIndexOutput.cs" />
+    <Compile Include="Intblock\IntBlockIndexReader.cs" />
     <Compile Include="Intblock\VariableIntBlockIndexInput.cs" />
     <Compile Include="Intblock\VariableIntBlockIndexOutput.cs" />
     <Compile Include="Memory\DirectDocValuesConsumer.cs" />
