fixes based on feedback (rename classes, fix indents, remove 'this.')

--- a/src/Lucene.Net.Classification/Lucene.Net.Classification.csproj
+++ b/src/Lucene.Net.Classification/Lucene.Net.Classification.csproj
@@ -40,8 +40,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClassificationResult.cs" />
-    <Compile Include="Classifier.cs" />
-    <Compile Include="KNearesteighborClassifier.cs" />
+    <Compile Include="IClassifier.cs" />
+    <Compile Include="KNearestNeighborClassifier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleNaiveBayesClassifier.cs" />
   </ItemGroup>
