Bring in basic support for Nightly / Weekly / AwaitsFix
This would have been smarter if NUnit's attributes would have any power at all. Currently they are just being used as markers and interpretted by the NUnit core using reflection. This sucks and we need to find a way around that soon.

--- a/src/Lucene.Net.TestFramework/Lucene.Net.TestFramework.csproj
+++ b/src/Lucene.Net.TestFramework/Lucene.Net.TestFramework.csproj
@@ -127,6 +127,9 @@
     <Compile Include="Analysis\VocabularyAssert.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Attributes\AwaitsFixAttribute.cs" />
+    <Compile Include="Attributes\NightlyAttribute.cs" />
+    <Compile Include="Attributes\WeeklyAttribute.cs" />
     <Compile Include="Codecs\asserting\AssertingCodec.cs">
       <SubType>Code</SubType>
     </Compile>
