--- a/src/Lucene.Net.Expressions/Lucene.Net.Expressions.csproj
+++ b/src/Lucene.Net.Expressions/Lucene.Net.Expressions.csproj
@@ -53,6 +53,8 @@
     <Compile Include="JS\JavascriptCompiler.cs" />
     <Compile Include="JS\JavascriptLexer.cs" />
     <Compile Include="JS\JavascriptParser.cs" />
+    <Compile Include="JS\MethodDescriptor.cs" />
+    <Compile Include="JS\TypeDescriptor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
