Marking a few things long running. (+1 squashed commits)
Squashed commits:

[4f28661] adding LongRunningTest attribute.

--- a/src/Lucene.Net.TestFramework/Lucene.Net.TestFramework.csproj
+++ b/src/Lucene.Net.TestFramework/Lucene.Net.TestFramework.csproj
@@ -128,6 +128,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Attributes\AwaitsFixAttribute.cs" />
+    <Compile Include="Attributes\LongRunningTestAttribute.cs" />
     <Compile Include="Attributes\NightlyAttribute.cs" />
     <Compile Include="Attributes\WeeklyAttribute.cs" />
     <Compile Include="Codecs\asserting\AssertingCodec.cs">
